--- a/Profile Page/Profilepage.html
+++ b/Profile Page/Profilepage.html
@@ -123,7 +123,7 @@
                                 <a class="nav-link" href="#">Document</a>
                             </li>
                             <li class="nav-profile">
-                                <a class="nav-link" href="#">Setting</a>
+                                <a class="nav-link" href="#">Settings</a>
                             </li>
                         </ul>
                     </div>
