Update homepage & video profil page
nambah job

--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -98,13 +98,12 @@
                       />
                       8 Hr ago
                     </div>
-
                     <div class="job-salary">
                       <img
                         src="https://www.svgrepo.com/show/471303/currency-rupee-circle.svg"
                         alt=""
                       />
-                      22k - 30k
+                      32k
                     </div>
                   </div>
                 </div>
@@ -121,23 +120,67 @@
                       <img
                         src="https://www.svgrepo.com/show/486434/location-filled.svg"
                       />
-                      Sikar
+                      Jakarta
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-
             <div class="col">
               <div class="card job-card">
                 <div class="card-header">
                   <div class="job-type">Full Time</div>
                 </div>
                 <div class="card-body">
-                  <h3 class="job-title">Web Developer</h3>
+                  <h3 class="job-title">Back-End Programming</h3>
                   <div class="job-description">
-                    PHP Web Developer with knoweldge of both frontend and
-                    backend technology.
+                    Programming with knoweldge of backend technology.
+                  </div>
+                  <div class="job-posting-details">
+                    <div class="job-posted-time">
+                      <img
+                        src="https://www.svgrepo.com/show/487203/clock.svg"
+                        alt=""
+                      />
+                      2 Hr ago
+                    </div>
+                    <div class="job-salary">
+                      <img
+                        src="https://www.svgrepo.com/show/471303/currency-rupee-circle.svg"
+                        alt=""
+                      />
+                      23k
+                    </div>
+                  </div>
+                </div>
+                <div class="card-footer">
+                  <a href="#"
+                    ><img
+                      class="company-logo"
+                      src="https://scontent.fjai5-1.fna.fbcdn.net/v/t39.30808-6/301439850_573154561266574_6075881489814976167_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=UywnEN907MMAX85C--3&_nc_ht=scontent.fjai5-1.fna&oh=00_AfCHFUrOoPLnP5rC6wuybMNKfsKGK7DG3uvyppLaFOEXWQ&oe=63C7FB4E"
+                      alt=""
+                  /></a>
+                  <div class="company-details">
+                    <div class="company-title">Science Career Coaching</div>
+                    <div class="location">
+                      <img
+                        src="https://www.svgrepo.com/show/486434/location-filled.svg"
+                      />
+                      Malang
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card job-card">
+                <div class="card-header">
+                  <div class="job-type">Full Time</div>
+                </div>
+                <div class="card-body">
+                  <h3 class="job-title">Artificial Intelligence</h3>
+                  <div class="job-description">
+                    Creating smart computer with high intelligence that can communicate with human.
                   </div>
                   <div class="job-posting-details">
                     <div class="job-posted-time">
@@ -147,13 +190,12 @@
                       />
                       8 Hr ago
                     </div>
-
                     <div class="job-salary">
                       <img
                         src="https://www.svgrepo.com/show/471303/currency-rupee-circle.svg"
                         alt=""
                       />
-                      22k - 30k
+                      22k
                     </div>
                   </div>
                 </div>
@@ -165,28 +207,26 @@
                       alt=""
                   /></a>
                   <div class="company-details">
-                    <div class="company-title">Science Career Coaching</div>
+                    <div class="company-title">AI Coaching</div>
                     <div class="location">
                       <img
                         src="https://www.svgrepo.com/show/486434/location-filled.svg"
                       />
-                      Sikar
+                      Bandung
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-
             <div class="col">
               <div class="card job-card">
                 <div class="card-header">
                   <div class="job-type">Full Time</div>
                 </div>
                 <div class="card-body">
-                  <h3 class="job-title">Web Developer</h3>
+                  <h3 class="job-title">Game Developer</h3>
                   <div class="job-description">
-                    PHP Web Developer with knoweldge of both frontend and
-                    backend technology.
+                    Create a game with great engine and high skill of programming.
                   </div>
                   <div class="job-posting-details">
                     <div class="job-posted-time">
@@ -194,15 +234,14 @@
                         src="https://www.svgrepo.com/show/487203/clock.svg"
                         alt=""
                       />
-                      8 Hr ago
+                      1 Day ago
                     </div>
-
                     <div class="job-salary">
                       <img
                         src="https://www.svgrepo.com/show/471303/currency-rupee-circle.svg"
                         alt=""
                       />
-                      22k - 30k
+                      16k
                     </div>
                   </div>
                 </div>
@@ -214,28 +253,26 @@
                       alt=""
                   /></a>
                   <div class="company-details">
-                    <div class="company-title">Science Career Coaching</div>
+                    <div class="company-title">Game Coaching</div>
                     <div class="location">
                       <img
                         src="https://www.svgrepo.com/show/486434/location-filled.svg"
                       />
-                      Sikar
+                      Surabaya
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-
             <div class="col">
               <div class="card job-card">
                 <div class="card-header">
                   <div class="job-type">Full Time</div>
                 </div>
                 <div class="card-body">
-                  <h3 class="job-title">Web Developer</h3>
+                  <h3 class="job-title">UI/UX</h3>
                   <div class="job-description">
-                    PHP Web Developer with knoweldge of both frontend and
-                    backend technology.
+                    Make a design with very userable and wonderful.
                   </div>
                   <div class="job-posting-details">
                     <div class="job-posted-time">
@@ -243,15 +280,14 @@
                         src="https://www.svgrepo.com/show/487203/clock.svg"
                         alt=""
                       />
-                      8 Hr ago
+                      1 Day ago
                     </div>
-
                     <div class="job-salary">
                       <img
                         src="https://www.svgrepo.com/show/471303/currency-rupee-circle.svg"
                         alt=""
                       />
-                      22k - 30k
+                      41k
                     </div>
                   </div>
                 </div>
@@ -263,28 +299,26 @@
                       alt=""
                   /></a>
                   <div class="company-details">
-                    <div class="company-title">Science Career Coaching</div>
+                    <div class="company-title">Design Coaching</div>
                     <div class="location">
                       <img
                         src="https://www.svgrepo.com/show/486434/location-filled.svg"
                       />
-                      Sikar
+                      Semarang
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-
             <div class="col">
               <div class="card job-card">
                 <div class="card-header">
                   <div class="job-type">Full Time</div>
                 </div>
                 <div class="card-body">
-                  <h3 class="job-title">Web Developer</h3>
+                  <h3 class="job-title">Cyber Security</h3>
                   <div class="job-description">
-                    PHP Web Developer with knoweldge of both frontend and
-                    backend technology.
+                    Be a hacker, but a good hacker.
                   </div>
                   <div class="job-posting-details">
                     <div class="job-posted-time">
@@ -292,15 +326,14 @@
                         src="https://www.svgrepo.com/show/487203/clock.svg"
                         alt=""
                       />
-                      8 Hr ago
+                      3 Day ago
                     </div>
-
                     <div class="job-salary">
                       <img
                         src="https://www.svgrepo.com/show/471303/currency-rupee-circle.svg"
                         alt=""
                       />
-                      22k - 30k
+                      21k
                     </div>
                   </div>
                 </div>
@@ -312,28 +345,26 @@
                       alt=""
                   /></a>
                   <div class="company-details">
-                    <div class="company-title">Science Career Coaching</div>
+                    <div class="company-title">Security Coaching</div>
                     <div class="location">
                       <img
                         src="https://www.svgrepo.com/show/486434/location-filled.svg"
                       />
-                      Sikar
+                      Jakarta
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-
             <div class="col">
               <div class="card job-card">
                 <div class="card-header">
                   <div class="job-type">Full Time</div>
                 </div>
                 <div class="card-body">
-                  <h3 class="job-title">Web Developer</h3>
+                  <h3 class="job-title">Front-End Programming</h3>
                   <div class="job-description">
-                    PHP Web Developer with knoweldge of both frontend and
-                    backend technology.
+                    Programming with knoweldge of frontend technology.
                   </div>
                   <div class="job-posting-details">
                     <div class="job-posted-time">
@@ -341,15 +372,14 @@
                         src="https://www.svgrepo.com/show/487203/clock.svg"
                         alt=""
                       />
-                      8 Hr ago
+                      7 Day ago
                     </div>
-
                     <div class="job-salary">
                       <img
                         src="https://www.svgrepo.com/show/471303/currency-rupee-circle.svg"
                         alt=""
                       />
-                      22k - 30k
+                      29k
                     </div>
                   </div>
                 </div>
@@ -366,23 +396,21 @@
                       <img
                         src="https://www.svgrepo.com/show/486434/location-filled.svg"
                       />
-                      Sikar
+                      Malang
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-
             <div class="col">
               <div class="card job-card">
                 <div class="card-header">
                   <div class="job-type">Full Time</div>
                 </div>
                 <div class="card-body">
-                  <h3 class="job-title">Web Developer</h3>
+                  <h3 class="job-title">Data Science</h3>
                   <div class="job-description">
-                    PHP Web Developer with knoweldge of both frontend and
-                    backend technology.
+                    Processing data, a very big data.
                   </div>
                   <div class="job-posting-details">
                     <div class="job-posted-time">
@@ -390,15 +418,14 @@
                         src="https://www.svgrepo.com/show/487203/clock.svg"
                         alt=""
                       />
-                      8 Hr ago
+                      2 Weeks ago
                     </div>
-
                     <div class="job-salary">
                       <img
                         src="https://www.svgrepo.com/show/471303/currency-rupee-circle.svg"
                         alt=""
                       />
-                      22k - 30k
+                      27k
                     </div>
                   </div>
                 </div>
@@ -415,23 +442,21 @@
                       <img
                         src="https://www.svgrepo.com/show/486434/location-filled.svg"
                       />
-                      Sikar
+                      Malang
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-
             <div class="col">
               <div class="card job-card">
                 <div class="card-header">
                   <div class="job-type">Full Time</div>
                 </div>
                 <div class="card-body">
-                  <h3 class="job-title">Web Developer</h3>
+                  <h3 class="job-title">Data Analyst</h3>
                   <div class="job-description">
-                    PHP Web Developer with knoweldge of both frontend and
-                    backend technology.
+                    Analyzing data, creating a summary.
                   </div>
                   <div class="job-posting-details">
                     <div class="job-posted-time">
@@ -439,15 +464,14 @@
                         src="https://www.svgrepo.com/show/487203/clock.svg"
                         alt=""
                       />
-                      8 Hr ago
+                      3 Weeks ago
                     </div>
-
                     <div class="job-salary">
                       <img
                         src="https://www.svgrepo.com/show/471303/currency-rupee-circle.svg"
                         alt=""
                       />
-                      22k - 30k
+                      20k
                     </div>
                   </div>
                 </div>
@@ -464,56 +488,7 @@
                       <img
                         src="https://www.svgrepo.com/show/486434/location-filled.svg"
                       />
-                      Sikar
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="col">
-              <div class="card job-card">
-                <div class="card-header">
-                  <div class="job-type">Full Time</div>
-                </div>
-                <div class="card-body">
-                  <h3 class="job-title">Web Developer</h3>
-                  <div class="job-description">
-                    PHP Web Developer with knoweldge of both frontend and
-                    backend technology.
-                  </div>
-                  <div class="job-posting-details">
-                    <div class="job-posted-time">
-                      <img
-                        src="https://www.svgrepo.com/show/487203/clock.svg"
-                        alt=""
-                      />
-                      8 Hr ago
-                    </div>
-
-                    <div class="job-salary">
-                      <img
-                        src="https://www.svgrepo.com/show/471303/currency-rupee-circle.svg"
-                        alt=""
-                      />
-                      22k - 30k
-                    </div>
-                  </div>
-                </div>
-                <div class="card-footer">
-                  <a href="#"
-                    ><img
-                      class="company-logo"
-                      src="https://scontent.fjai5-1.fna.fbcdn.net/v/t39.30808-6/301439850_573154561266574_6075881489814976167_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=UywnEN907MMAX85C--3&_nc_ht=scontent.fjai5-1.fna&oh=00_AfCHFUrOoPLnP5rC6wuybMNKfsKGK7DG3uvyppLaFOEXWQ&oe=63C7FB4E"
-                      alt=""
-                  /></a>
-                  <div class="company-details">
-                    <div class="company-title">Science Career Coaching</div>
-                    <div class="location">
-                      <img
-                        src="https://www.svgrepo.com/show/486434/location-filled.svg"
-                      />
-                      Sikar
+                      Solo
                     </div>
                   </div>
                 </div>
