Update FAQ and JobDetail

--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -180,7 +180,8 @@
                 <div class="card-body">
                   <h3 class="job-title">Artificial Intelligence</h3>
                   <div class="job-description">
-                    Creating smart computer with high intelligence that can communicate with human.
+                    Creating smart computer with high intelligence that can
+                    communicate with human.
                   </div>
                   <div class="job-posting-details">
                     <div class="job-posted-time">
@@ -226,7 +227,8 @@
                 <div class="card-body">
                   <h3 class="job-title">Game Developer</h3>
                   <div class="job-description">
-                    Create a game with great engine and high skill of programming.
+                    Create a game with great engine and high skill of
+                    programming.
                   </div>
                   <div class="job-posting-details">
                     <div class="job-posted-time">
@@ -498,7 +500,6 @@
         </div>
       </div>
     </div>
-
     <!-- MAIN SECTION END-->
 
     <script
